--- a/webapp/src/main/resources/templates/employees/overview.html
+++ b/webapp/src/main/resources/templates/employees/overview.html
@@ -9,12 +9,171 @@
     <div class="row">
         <div class="col-lg-12">
             <H2>Personal Overview</H2>
-            <p>//TODO</p>
+
+            <div id="employeeInfo">
+                <h3>Your Details</h3>
+
+                <p>Name: <span th:text="${employee.name}"></span></p>
+
+                <p>Email: <span th:text="${employee.email}"></span></p>
+
+                <p>Functional level: <span th:text="${employee.functionalLevel}"></span></p>
+
+                <p>Role:
+                    <span th:if="${employee.role.toString() == 'ROLE_FLEET'}">Fleet</span>
+                    <span th:if="${employee.role.toString() == 'ROLE_NORMAL'}">Normal</span>
+                </p>
+            </div>
+
+            <p th:if="${carUsage == null}">
+                You have no car or open order.
+            </p>
+
+            <div th:if="${carUsage != null}">
+                <p th:if="${carUsage.licensePlate == null}" style="font-style: italic; font-weight: bold;">
+                    This is an open order! Fleet still has to confirm it.
+                </p>
+
+                <div id="carInfo" th:with="car = ${carUsage.orderedCar.car}">
+                    <h3>Car details</h3>
+
+                    <p>Brand: <span th:text="${car.brand}">brand</span></p>
+
+                    <p>Model: <span th:text="${car.model}">model</span></p>
+
+                    <p>Category: <span th:text="${car.category}">category</span></p>
+
+                    <p>Horse Power: <span th:text="${car.pk}">pk</span></p>
+
+                    <p>Fiscal Horse Power: <span th:text="${car.fiscalHP}">fiscalHp</span></p>
+
+                    <p>Emission: <span th:text="${car.emission}">emission</span></p>
+
+                    <p>Fuel type: <span th:text="${car.fuelType}">fuelType</span></p>
+
+                    <p>Car type: <span th:text="${car.carType}">carType</span></p>
+
+                    <p>Delivery time: <span th:text="${car.deliveryTime}">carType</span> months</p>
+
+                    <p>Ideal km: <span th:text="${car.idealKm}">idealKm</span></p>
+
+                    <p>Max km: <span th:text="${car.maxKm}">maxKm</span></p>
+
+                    <p>List price: €<span th:text="${car.listPrice}">listPrice</span></p>
+
+                    <p>Benefit: €<span th:text="${car.benefit}">benefit</span></p>
+
+                    <div id="basePack">
+                        <h4>Base Pack</h4>
+                        <h5 th:text="${car.basePack.name}">basePackName</h5>
+
+                        <p>price: €<span th:text="${car.basePack.price}">basePackPrice</span></p>
+                        <h6>Options:</h6>
+                        <ul>
+                            <li th:each="option : ${car.basePack.carOptions}">
+                                <h7 th:text="${option.name}"></h7>
+                                <p th:text="${option.description}"></p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="pictures">
+                        <h4>Pictures</h4>
+                        <a th:each="imgLink : ${car.pictures}" th:href="${imgLink}">
+                            <img th:src="${imgLink}" height="400" width="500" class="img-thumbnail"/>
+                        </a>
+                    </div>
+                </div>
+
+                <div id="orderInfo" th:with="orderDetails=${carUsage.orderedCar}">
+                    <h3>Order Specific Details</h3>
+
+                    <p>Price: <span th:text="${orderDetails.price}"></span></p>
+
+                    <p>Color: <span th:text="${orderDetails.color}"></span></p>
+
+                    <div id="extraPacks" th:with="packs=${orderDetails.packs}">
+                        <h4>Extra Packs</h4>
+
+                        <p th:if="${packs.isEmpty()}">None</p>
+                        <table class="table" th:if="${!packs.isEmpty()}">
+                            <thead>
+                            <th>Name</th>
+                            <th>Options</th>
+                            </thead>
+                            <tbody>
+                            <tr th:each="pack : ${packs}">
+                                <td th:text="${pack.name}"></td>
+                                <td>
+                                    <ul>
+                                        <li th:each="option : ${pack.carOptions}">
+                                            <h5 th:text="${option.name}">optionName</h5>
+
+                                            <p th:text="${option.description}">optionDescription</p>
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <div id="extraOptions" th:with="options=${orderDetails.options}">
+                        <h4>Extra Options</h4>
+
+                        <p th:if="${options.isEmpty()}">None</p>
+                        <table class="table" th:if="${!options.isEmpty()}">
+                            <thead>
+                            <th>Name</th>
+                            <th>Description</th>
+                            </thead>
+                            <tbody>
+                            <tr th:each="option : ${options}">
+                                <td th:text="${option.name}">optionName</td>
+                                <td th:text="${option.description}">optionDescription</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div id="usageInfo" th:if="${carUsage.licensePlate != null}">
+                    <h3>Usage Details</h3>
+
+                    <p>License Plate: <span th:text="${carUsage.licensePlate}"></span></p>
+
+                    <p>Order date: <span th:text="${carUsage.orderDate}"></span></p>
+
+                    <p>Start date: <span th:text="${carUsage.startDate}"></span></p>
+
+                    <p>Initial end date: <span th:text="${carUsage.initialEndDate}"></span></p>
+
+                    <div id="usageUpdates" th:with="updates=${carUsage.usageUpdates}">
+                        <h4>Usage Updates</h4>
+
+                        <p th:if="${updates.isEmpty()}">Nothing to report.</p>
+                        <table class="table" th:if="${!updates.isEmpty()}">
+                            <thead>
+                            <th>Date Received Update</th>
+                            <th>New Amount of Km</th>
+                            <th>Amount Fuelled Since Last Update (liter)</th>
+                            <th>Total paid For Fuel</th>
+                            </thead>
+                            <tbody>
+                            <tr th:each="update : ${updates}">
+                                <td th:text="${update.updateDate}"></td>
+                                <td th:text="${update.newTotalKm}"></td>
+                                <td th:text="${update.totalFuelledForPeriod}"></td>
+                                <td>€ <span th:text="${update.totalFuelPrice}"></span></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
-    <hr/>
 </div>
+<hr/>
+
 
 <div th:replace="fragments/fragments :: div.scripts"></div>
 </body>
