--- a/webapp/src/main/resources/templates/fleet/cars.html
+++ b/webapp/src/main/resources/templates/fleet/cars.html
@@ -1,6 +1,16 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/fragments :: head"></head>
 <body>
+<script type="text/javascript" charset="utf-8">
+    $(document).ready( function () {
+        $('#carsInUse').dataTable().columnFilter();
+
+    } );
+    $(document).ready( function () {
+        $('#carsInFreePool').dataTable().columnFilter();
+
+    } );
+</script>
 <div th:replace="fragments/fragments :: header"></div>
 
 <div class="container">
@@ -12,7 +22,7 @@
 
             <h3>In Use</h3>
             <p th:if="${ourCarsInUse.isEmpty()}">No cars in use.</p>
-            <table class="table" th:if="${!ourCarsInUse.isEmpty()}">
+            <table class="table" th:if="${!ourCarsInUse.isEmpty()}" id="carsInUse">
                 <thead>
                 <th>Car</th>
                 <th>Employee</th>
@@ -27,15 +37,18 @@
                     </td>
                     <td><span th:text="${carUsage.employee.name}"></span><small>(<a href="#">edit</a>)</small></td>
                     <td>
-                        <button class="form-control">Details</button>
-                        <button class="form-control">To Free Pool</button>
+                        <a class="form-control" th:href="${'cars/detail/' + carUsage.id }">Details</a>
+                        <form method="post" th:action="${'cars/to-free-pool'}">
+                            <input type="hidden" name="carUsageId" th:value="${carUsage.id}" />
+                            <input type="submit" class="form-control" value="To Free Pool" />
+                        </form>
                     </td>
                 </tr>
                 </tbody>
             </table>
             <h3>In Free Pool</h3>
             <p th:if="${ourCarsInFreePool.isEmpty()}">No cars in our free pool.</p>
-            <table class="table" th:if="${!ourCarsInFreePool.isEmpty()}">
+            <table class="table" th:if="${!ourCarsInFreePool.isEmpty()}" id="carsInFreePool">
                 <thead>
                 <th>Car</th>
                 <th>Action</th>
@@ -48,8 +61,11 @@
                         <span th:text="${car.brand + ' ' + car.model}"></span>
                     </td>
                     <td>
-                        <button class="form-control">Details</button>
-                        <button class="form-control">Remove</button>
+                        <a class="form-control" th:href="${'cars/detail/' + carUsage.id }">Details</a>
+                        <form method="post" th:action="${'cars/remove'}">
+                            <input type="hidden" name="carUsageId" th:value="${carUsage.id}" />
+                            <input type="submit" class="form-control" value="Remove" />
+                        </form>
                     </td>
                 </tr>
                 </tbody>
@@ -61,5 +77,6 @@
 </div>
 
 <div th:replace="fragments/fragments :: div.scripts"></div>
+
 </body>
 </html>
