--- a/webapp/src/main/resources/templates/createcar.html
+++ b/webapp/src/main/resources/templates/createcar.html
@@ -10,7 +10,7 @@
 
 
 
-            <form method="POST" th:object="${car}">
+            <form method="POST" th:object="${car}" class="form-horizontal" >
                 <div th:class="${#fields.hasErrors('brand')}? 'has-error'">
                     <label th:for="${#ids.next('brand')}"> Brand:</label>
                     <input type="text" th:field="*{brand}" />
