--- a/webapp/src/main/resources/templates/fleet/createcaroption.html
+++ b/webapp/src/main/resources/templates/fleet/createcaroption.html
@@ -1,10 +1,16 @@
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:spring="http://www.springframework.org/tags">
-<head>
-
-    <title></title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/fragments :: head"></head>
 <body>
+<div th:replace="fragments/fragments :: header"></div>
+
+<div th:replace="fragments/fragments :: div.scripts"></div>
+
+
+
+<div class="container">
+    <div th:replace="fragments/fragments :: div#page-header"></div>
+    <div class="row">
+        <div class="col-lg-12">
 
 <form method="POST" th:object="${carOption}">
     <div th:class="${#fields.hasErrors('name')}? 'has-error'">
@@ -23,6 +29,17 @@
     <br/>
     <button type="submit">Add Option </button>
 </form>
+
+        </div>
+
+        <hr/>
+    </div>
+</div>
+
+
+
+
+
 
 </body>
 </html>
