--- a/webapp/src/main/resources/templates/fragments/fragments.html
+++ b/webapp/src/main/resources/templates/fragments/fragments.html
@@ -30,6 +30,14 @@
                     <li><a th:href="@{/fleet/cars}">Our Cars</a></li>
                 </ul>
             </li>
+            <li class="dropdown" sec:authorize="hasRole('ROLE_FLEET')">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Catalog <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a th:href="@{/fleet/caroptions}">Options</a></li>
+                    <li><a th:href="@{/fleet/confirm-order}">Confirm Orders</a></li>
+                    <li><a th:href="@{/fleet/cars}">Our Cars</a></li>
+                </ul>
+            </li>
             <li th:if="${session.loggedInUserCanOrderNewCar}"><a th:href="@{/employees/select-car}">Ordering Car Available!</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
