--- a/webapp/src/main/resources/templates/fleet/createpack.html
+++ b/webapp/src/main/resources/templates/fleet/createpack.html
@@ -2,13 +2,39 @@
 <head th:replace="fragments/fragments :: head"></head>
 <body>
 <div th:replace="fragments/fragments :: header"></div>
+<div th:replace="fragments/fragments :: div.scripts"></div>
+<script type="text/javascript" charset="utf-8">
+    $(document).ready( function () {
+        $('#possibleoptions').dataTable().columnFilter();
+
+    } );
+
+    function addInPack(id){
+        var data = "id=" + encodeURIComponent(id);
+
+        $.ajax({
+            url : "/addoptiontopack",
+            data : data,
+            type : "GET",
+
+            success : function(response) {
+                alert( response );
+            },
+            error : function(xhr, status, error) {
+                alert(xhr.responseText);
+            }
+        });
+    }
+
+
+</script>
 
 <div class="container">
     <div th:replace="fragments/fragments :: div#page-header"></div>
     <div class="row">
         <div class="col-lg-12">
 
-<form method="POST" th:object="${pack}" action="/createpack">
+<form method="POST" th:object="${pack}" action="/fleet/createpack">
     <div th:class="${#fields.hasErrors('name')}? 'has-error'">
         <label th:for="${#ids.next('name')}"> name:</label>
         <input type="text" th:field="*{name}" />
@@ -86,7 +112,7 @@
 
     <br/>
 
-            <form method="POST" th:object="${carOption}"  action="/createnewpackoption">
+            <form method="POST" th:object="${carOption}"  action="/fleet/createnewpackoption">
                 <div th:class="${#fields.hasErrors('name')}? 'has-error'">
                     <label th:for="${#ids.next('name')}"> name:</label>
                     <input type="text" th:field="*{name}" />
@@ -113,31 +139,6 @@
 
 
 
-    <div th:replace="fragments/fragments :: div.scripts"></div>
-<script type="text/javascript" charset="utf-8">
-    $(document).ready( function () {
-        $('#possibleoptions').dataTable().columnFilter();
 
-    } );
-
- function addInPack(id){
-     var data = "id=" + encodeURIComponent(id);
-
-     $.ajax({
-         url : "/addoptiontopack",
-         data : data,
-         type : "GET",
-
-         success : function(response) {
-             alert( response );
-         },
-         error : function(xhr, status, error) {
-             alert(xhr.responseText);
-         }
-     });
- }
-
-
-</script>
 </body>
 </html>
