--- a/webapp/src/main/resources/templates/fleet/editpack.html
+++ b/webapp/src/main/resources/templates/fleet/editpack.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-lg-12">
 
-            <form method="POST" th:object="${pack}" action="/editpack">
+            <form method="POST" th:object="${pack}" action="/fleet/editpack">
                 <div th:class="${#fields.hasErrors('name')}? 'has-error'">
                     <label th:for="${#ids.next('name')}"> name:</label>
                     <input type="text" th:field="*{name}" />
@@ -92,7 +92,7 @@
 
             <br/>
 
-            <form method="POST" th:object="${carOption}"  action="/createeditpackoption">
+            <form method="POST" th:object="${carOption}"  action="/fleet/createeditpackoption">
                 <div th:class="${#fields.hasErrors('name')}? 'has-error'">
                     <label th:for="${#ids.next('name')}"> name:</label>
                     <input type="text" th:field="*{name}" />
@@ -119,29 +119,6 @@
 
 
 
-<div th:replace="fragments/fragments :: div.scripts"></div>
-<script type="text/javascript" charset="utf-8">
-    $(document).ready( function () {
-        $('#possibleoptions').dataTable().columnFilter();
 
-    } );
-
-    function addInPack(id){
-        var data = "id=" + encodeURIComponent(id);
-
-        $.ajax({
-            url : "/addoptiontopack",
-            data : data,
-            type : "GET",
-
-            success : function(response) {
-                alert( response );
-            },
-            error : function(xhr, status, error) {
-                alert(xhr.responseText);
-            }
-        });
-    }
-</script>
 </body>
 </html>
