--- a/webapp/src/main/resources/templates/fragments/fragments.html
+++ b/webapp/src/main/resources/templates/fragments/fragments.html
@@ -34,7 +34,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Catalog <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a th:href="@{/fleet/caroptions}">Options</a></li>
-                    <li><a th:href="@{/fleet/confirm-order}">Confirm Orders</a></li>
+                    <li><a th:href="@{/fleet/packs}">Car Packs</a></li>
                     <li><a th:href="@{/fleet/cars}">Our Cars</a></li>
                 </ul>
             </li>
