create car views moved to fleet folder

--- a/webapp/src/main/resources/templates/fleet/createcar.html
+++ b/webapp/src/main/resources/templates/fleet/createcar.html
@@ -2,7 +2,7 @@
 <head th:replace="fragments/fragments :: head"></head>
 <body>
 <div th:replace="fragments/fragments :: header"></div>
-
+<div th:replace="fragments/fragments :: div.scripts"></div>
 <div class="container">
     <div th:replace="fragments/fragments :: div#page-header"></div>
     <div class="row">
@@ -113,7 +113,7 @@
 
 
                 <br/>
-                <button type="submit">Go to options selection </button>
+                <button type="submit">Go to pack/options selection </button>
             </form>
 
 
@@ -126,7 +126,7 @@
 
 
 
-<div th:replace="fragments/fragments :: div.scripts"></div>
+
 
 </body>
 </html>
