--- a/webapp/src/main/resources/templates/fleet/caroverview.html
+++ b/webapp/src/main/resources/templates/fleet/caroverview.html
@@ -8,6 +8,10 @@
     <div class="row">
         <div class="col-lg-12">
 
+            <div>
+                <a th:href="@{/fleet/createcar}">Create New Car </a>
+            </div>
+
             <table id="allCars">
                 <thead>
                 <tr>
