--- a/webapp/src/main/resources/templates/fragments/fragments.html
+++ b/webapp/src/main/resources/templates/fragments/fragments.html
@@ -35,7 +35,7 @@
                 <ul class="dropdown-menu">
                     <li><a th:href="@{/fleet/caroptions}">Options</a></li>
                     <li><a th:href="@{/fleet/packs}">Car Packs</a></li>
-                    <li><a th:href="@{/fleet/cars}">Our Cars</a></li>
+                    <li><a th:href="@{/fleet/caroverview}">Cars</a></li>
                 </ul>
             </li>
             <li th:if="${session.loggedInUserCanOrderNewCar}"><a th:href="@{/employees/select-car}">Ordering Car Available!</a></li>
