--- a/webapp/src/main/resources/templates/fleet/createcar.html
+++ b/webapp/src/main/resources/templates/fleet/createcar.html
@@ -47,7 +47,7 @@
                     <label th:for="${#ids.next('fuelType')}"> FuelType:</label>
 
                     <select name="fuel-selector" th:field="*{fuelType}">
-                        <option th:each="fuel : ${T(com.realdolmen.fleet.model.FuelType).values()}" th:value="${fuel}" th:text="${fuel}"  ></option>
+                        <option th:each="fuel : ${T(com.realdolmen.fleet.enums.FuelType).values()}" th:value="${fuel}" th:text="${fuel}"  ></option>
                     </select>
                   <!--   <input type="text" th:field="*{fuelType}" /> -->
                     <span th:if="${#fields.hasErrors('fuelType')}" th:errors="*{fuelType}"></span>
@@ -56,7 +56,7 @@
                 <div th:class="${#fields.hasErrors('carType')}? 'has-error'">
                     <label th:for="${#ids.next('carType')}"> CarType:</label>
                     <select name="cartype-selector" th:field="*{carType}" >
-                        <option th:each="fuel : ${T(com.realdolmen.fleet.model.CarType).values()}" th:value="${fuel}" th:text="${fuel}" ></option>
+                        <option th:each="fuel : ${T(com.realdolmen.fleet.enums.CarType).values()}" th:value="${fuel}" th:text="${fuel}" ></option>
                     </select>
 
                     <span th:if="${#fields.hasErrors('carType')}" th:errors="*{carType}"></span>
