--- a/webapp/src/main/resources/templates/fleet/createpack.html
+++ b/webapp/src/main/resources/templates/fleet/createpack.html
@@ -33,8 +33,10 @@
     <div th:replace="fragments/fragments :: div#page-header"></div>
     <div class="row">
         <div class="col-lg-12">
+            <div>
 
 <form method="POST" th:object="${pack}" action="/fleet/createpack">
+    <div >
     <div th:class="${#fields.hasErrors('name')}? 'has-error'">
         <label th:for="${#ids.next('name')}"> name:</label>
         <input type="text" th:field="*{name}" />
@@ -47,7 +49,9 @@
         <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
     </div>
 
+</div>
     <div>
+    <div style="float:left; width: 45%">
         <h1> SelectedOptions </h1>
         <table>
             <tr th:each="caropt,idStat  : ${pack.carOptions}">
@@ -59,12 +63,12 @@
 
         </table>
     </div>
-    <button type="submit">Save pack </button>
 
 
 
 
-    <table id="possibleoptions">
+    <div style="float:left; width: 50%">
+    <table  id="possibleoptions" >
         <thead>
         <tr>
             <th>Name </th>
@@ -103,15 +107,18 @@
         </tr>
         </tbody>
     </table>
+        </div>
+        </div>
 
 
 
+    <button type="submit">Save pack </button>
 </form>
 
-
+</div>
 
     <br/>
-
+<div style="clear:both;">
             <form method="POST" th:object="${carOption}"  action="/fleet/createnewpackoption">
                 <div th:class="${#fields.hasErrors('name')}? 'has-error'">
                     <label th:for="${#ids.next('name')}"> name:</label>
@@ -130,6 +137,7 @@
                 <button type="submit">Add new pack Option </button>
             </form>
 
+</div>
         </div>
 
         <hr/>
