--- a/webapp/src/main/resources/templates/fragments/fragments.html
+++ b/webapp/src/main/resources/templates/fragments/fragments.html
@@ -12,6 +12,7 @@
     <link th:href="@{/css/jquery-ui.css}" rel="stylesheet"/>
     <link th:href="@{/css/jquery-ui.structure.css}" rel="stylesheet"/>
     <link th:href="@{/css/jquery-ui.theme.css}" rel="stylesheet"/>
+    <link th:href="@{/css/jquery.dataTables.min.css}" rel="stylesheet"/>
 </head>
 <body>
 
@@ -38,6 +39,7 @@
                     <li><a th:href="@{/fleet/caroverview}">Cars</a></li>
                 </ul>
             </li>
+            <li sec:authorize="hasRole('ROLE_FLEET')"> <a th:href="@{/fleet/rdemployee}">Employees</a> </li>
             <li th:if="${session.loggedInUserCanOrderNewCar}"><a th:href="@{/employees/select-car}">Ordering Car Available!</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
