--- a/webapp/src/main/resources/templates/fleet/rdemployee.html
+++ b/webapp/src/main/resources/templates/fleet/rdemployee.html
@@ -15,7 +15,9 @@
     <div th:replace="fragments/fragments :: div#page-header"></div>
     <div class="row">
         <div class="col-lg-12">
-
+            <div>
+                <a th:href="@{/fleet/createemployee}">Create New Employee</a>
+            </div>
             <table id="allCars">
                 <thead>
                 <tr>
@@ -23,8 +25,8 @@
                     <th>E-mail</th>
                     <th>Functional level </th>
                     <th>Permission to order new Car</th>
-                    <th>Name </th>
                     <th>In service date</th>
+                    <th></th>
 
                 </tr>
                 </thead>
@@ -34,7 +36,6 @@
                     <th>E-mail</th>
                     <th>Functional level </th>
                     <th>Permission to order new Car</th>
-
                     <th>In service date</th>
 
                 </tr>
