--- a/webapp/src/main/resources/templates/fleet/editcar.html
+++ b/webapp/src/main/resources/templates/fleet/editcar.html
@@ -10,7 +10,7 @@
 
 
 
-            <form method="POST" th:object="${car}"  action="/editcar">
+            <form method="POST" th:object="${car}"  action="/fleet/editcar">
                 <div th:class="${#fields.hasErrors('brand')}? 'has-error'">
                     <label th:for="${#ids.next('brand')}"> Brand:</label>
                     <input type="text" th:field="*{brand}" />
