extra options are by default general realdolmen package when creating car

--- a/webapp/src/main/resources/templates/fleet/caroptions.html
+++ b/webapp/src/main/resources/templates/fleet/caroptions.html
@@ -20,7 +20,7 @@
                 <a th:href="@{/fleet/createcaroption}">Create New option</a>
             </div>
 
-<table id="caroptions" class="display" cellspacing="0" width="100%">
+<table id="caroptions" >
     <thead>
     <tr>
         <th>Name </th>
