changed RD link

--- a/webapp/src/main/resources/templates/fragments/fragments.html
+++ b/webapp/src/main/resources/templates/fragments/fragments.html
@@ -19,8 +19,7 @@
 
 <div class="navbar navbar-default" th:fragment="header">
     <div class="container">
-        <a class="navbar-brand" href="http://www.realdolmen.com"><span class="rd-red">Real</span><span class="rd-blue">Dolmen</span></a>
-        <a class="navbar-brand" href="http://portal.realdolmen.com">Portal</a>
+        <a class="navbar-brand" href="http://portal.realdolmen.com"><span class="rd-red">R</span><span class="rd-blue">D</span> Portal</a>
 
         <ul class="nav navbar-nav">
             <li sec:authorize="isAuthenticated()"><a th:href="@{/}">Personal Overview</a></li>
