added car delete in catalog and form input css

--- a/webapp/src/main/resources/static/css/styles.css
+++ b/webapp/src/main/resources/static/css/styles.css
@@ -11,3 +11,14 @@
 .rd-red {
   color: #ED2B29;
 }
+
+.container input {
+
+}
+
+.container label{
+  display:inline-block;
+  width:200px;
+  margin-right:30px;
+  text-align:left;
+}
