fixed role_normal bug

--- a/webapp/src/main/resources/templates/error.html
+++ b/webapp/src/main/resources/templates/error.html
@@ -1,4 +1,4 @@
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head th:replace="fragments/fragments :: head"></head>
 <body>
 <div th:replace="fragments/fragments :: header"></div>
@@ -11,7 +11,6 @@
             Something went wrong, please return to the <a th:href="@{/index}">homepage</a>.
         </div>
     </div>
-
     <hr/>
 </div>
 
